# Squareball

./: .gitignore  CMakeLists.txt  README.md
Resources/: TestTilemap.mtm  TestTileset.mts
Source/: Collision.cpp  Collision.h  Entity.cpp  Entity.h  Game.cpp  Game.h  Main.cpp  Render.cpp  Render.h  State.cpp  State.h  Tilemap.cpp  Tilemap.h  Tileset.cpp
Source/Core/: Collision.cpp  Collision.h  Entity.cpp  Entity.h  Main.cpp  Tilemap.cpp  Tilemap.h  Tileset.h
Source/Game/: Game.cpp  Match.cpp  Match.h
Source/Scenes/: Match.cpp  Match.h
Source/States/: Match.cpp  Match.h
